# pypro_original

./: .gitignore  README.md  example.py  main.py  pyproject.toml  requirements.txt
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: data_count.py  decorators.py  external_api.py  generators.py  main.py  masks.py  print_transactions.py  process_operations.py  processing.py  search.py  utils.py  widget.py
src/widget/: get_date.py  mask_account_card.py
tests/: conftest.py  test_data_count.py  test_decorators.py  test_externsl_api.py  test_generators.py  test_main.py  test_masks.py  test_process_operation.py  test_processing.py  test_search.py  test_utils.py  test_widget.py  tests.py
