[tool.poetry]
name = "testwork"
version = "0.1.0"
description = ""
authors = ["Чухутин Игорь <chukhutinigor@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
poetry-core = "^2.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
